# go-bazel-aws

./: .gitignore  BUILD.bazel  WORKSPACE  deps.bzl  go.mod
src/: BUILD.bazel  main.go
